Fix header from overflowing on mobile

--- a/src/verticals/thedrab/styles/components/Header.css
+++ b/src/verticals/thedrab/styles/components/Header.css
@@ -18,6 +18,7 @@
     display: block;
     width: 140px;
     text-decoration: none;
+    margin: 0 auto;
   }
 
   &__logo-container {
@@ -25,7 +26,11 @@
   }
 
   &__nav {
-    margin-left: auto;
+    align-self: center;
+
+    @media (--medium) {
+      margin-left: auto;
+    }
   }
 
   &__menu {
@@ -33,8 +38,12 @@
     padding: 0;
     margin: 0;
     display: flex;
-    padding-left: 2rem;
-    font-size: 1.4rem;
+    font-size: 1.3rem;
+
+    @media (--medium) {
+      font-size: 1.4rem;
+      padding-left: 2rem;
+    }
   }
 
   &__menu-item {
@@ -61,6 +70,7 @@
     display: block;
     margin-top: -0.3rem;
     margin-left: -0.3rem;
+    text-align: center;
 
     &--desktop {
       display: none;
